# ai-infra-index

./: .zenodo.json  ADX-PRODUCT-LISTING.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  HUGGINGFACE_DATASET_CARD.md  README.md  index.html  llms-full.txt  llms.txt  pyproject.toml  refresh-manifest.json  requirements.txt  robots.txt  sitemap.xml
.github/workflows/: content-refresh.yml  create-release-v1.2.0.yml  fix-azure-url.yml  new-page-generator.yml  publish-to-huggingface.yml  update-pricing.yml
comparisons/: a10-vs-rtx-a4000.md  a100-40-gb-sxm4-vs-h100-80-gb-sxm5.md  a100-80-gb-sxm4-vs-h100-nvl.md  mi325x-vs-rtx-3090-ti.md
data/: cloud-pricing.json  gpu-price-index.json  gpu-specs.json  validation-report.json
data/history/: pricing-2026-03-01.json  pricing-2026-03-02.json  pricing-2026-03-03.json  pricing-2026-03-04.json  pricing-2026-03-05.json  pricing-2026-03-06.json  pricing-2026-03-07.json  pricing-2026-03-08.json  pricing-2026-03-09.json  pricing-2026-03-10.json  pricing-2026-03-11.json  pricing-2026-03-12.json
kaggle/: dataset-metadata.json
landing/: index.html
scripts/: fetch_pricing.py  generate_new_pages.py
snapshots/: gpu-cloud-pricing-2026-W11.md
specs/: ai-accelerators.md  buy-vs-rent-decision-framework.md  cloud-gpu-pricing.md  gpu-cost-optimization-playbook.md  inference-benchmarks.md  model-gpu-sizing.md  regulatory-mandate-map.md  training-costs.md
